--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,8 +94,7 @@
             <img src="https://s3.amazonaws.com/design.dsausa.org/dsa-circle.png" width="56" height="56"></img>
           </div>
           <div class="eleven columns">
-            <!-- <h1>Boston DSA</h1> -->
-            <h1>Title</h1>
+            <h1>Boston DSA</h1>
           </div>
         </a>
       </div>
