--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,37 +107,37 @@
 
       <div class="row">
         <div class="four columns">
-          <div class="skill-card">
-            <header class="skill-card__header" style="background: #ff0000;">
-              <img class="skill-card__icon" src="https://pbs.twimg.com/profile_images/891003621822910464/Pdp_UUB__400x400.jpg" alt="Slack Logo"/>
-            </header>
-            <section class="skill-card__body">
-              <h2 class="skill-card__title">Website</h2>
-              <span class="skill-card__subtitle">bostondsa.org</span>
-            </section>
-          </div>
+          <div onClick="window.open('https://bostondsa.org/');" class="skill-card">
+          <header class="skill-card__header" style="background: #ff0000;">
+            <img class="skill-card__icon" src="https://pbs.twimg.com/profile_images/891003621822910464/Pdp_UUB__400x400.jpg" alt="Slack Logo"/>
+          </header>
+          <section class="skill-card__body">
+            <h2 class="skill-card__title">Website</h2>
+            <span class="skill-card__subtitle">bostondsa.org</span>
+          </section>
+        </div>
         </div>
         <div class="four columns">
-          <div class="skill-card">
-            <header class="skill-card__header" style="background: #fff;">
-              <img class="skill-card__icon" src="https://wiki.bostondsa.org/w/resources/assets/rose.jpg" alt="Wiki Logo"/>
-            </header>
-            <section class="skill-card__body">
-              <h2 class="skill-card__title">Wiki</h2>
-              <span class="skill-card__subtitle">Chapter knowledge base</span>
-            </section>
-          </div>
+          <div onClick="window.open('https://wiki.bostondsa.org/');" class="skill-card">
+          <header class="skill-card__header" style="background: #fff;">
+            <img class="skill-card__icon" src="https://wiki.bostondsa.org/w/resources/assets/rose.jpg" alt="Wiki Logo"/>
+          </header>
+          <section class="skill-card__body">
+            <h2 class="skill-card__title">Wiki</h2>
+            <span class="skill-card__subtitle">Chapter knowledge base</span>
+          </section>
+        </div>
         </div>
         <div class="four columns">
-          <div class="skill-card">
-            <header class="skill-card__header" style="background: #bffec7;">
-              <img class="skill-card__icon" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Slack_Technologies_Logo.svg" alt="HTML5 Logo"/>
-            </header>
-            <section class="skill-card__body">
-              <h2 class="skill-card__title">Chapter Slack</h2>
-              <span class="skill-card__subtitle">Join the conversation</span>
-            </section>
-          </div>
+          <div onClick="window.open('https://bostondsa.slack.com/');" class="skill-card">
+          <header class="skill-card__header" style="background: #bffec7;">
+            <img class="skill-card__icon" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Slack_Technologies_Logo.svg" alt="HTML5 Logo"/>
+          </header>
+          <section class="skill-card__body">
+            <h2 class="skill-card__title">Slack</h2>
+            <span class="skill-card__subtitle">Join the conversation</span>
+          </section>
+        </div>
         </div>
       </div>
 
