--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,33 +121,64 @@
         </div>
         <div class="four columns">
           <div onClick="window.open('https://wiki.bostondsa.org/');" class="card">
-          <header class="card__header" style="background: #fff;">
-            <img class="card__icon" src="https://wiki.bostondsa.org/w/resources/assets/rose.jpg" alt="Wiki Logo"/>
-          </header>
-          <section class="card__body">
-            <h2 class="card__title">Wiki</h2>
-            <span class="card__subtitle">Chapter knowledge base</span>
-          </section>
-        </div>
+            <header class="card__header" style="background: #fff;">
+              <img class="card__icon" src="https://wiki.bostondsa.org/w/resources/assets/rose.jpg" alt="Wiki Logo"/>
+            </header>
+            <section class="card__body">
+              <h2 class="card__title">Wiki</h2>
+              <span class="card__subtitle">Chapter knowledge base</span>
+            </section>
+          </div>
         </div>
         <div class="four columns">
-          <div onClick="window.open('https://bostondsa.slack.com/');" class="card">
-          <header class="card__header" style="background: #bffec7;">
-            <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Slack_Technologies_Logo.svg" alt="HTML5 Logo"/>
-          </header>
-          <section class="card__body">
-            <h2 class="card__title">Slack</h2>
-            <span class="card__subtitle">Join the conversation</span>
-          </section>
-        </div>
+          <div onClick="window.open('https://calendars.dsausa.org/u21m8kt8bb1lflp8jpmd317iik%40group.calendar.google.com');" class="card">
+            <header class="card__header" style="background: #821D1D;">
+              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/commons/5/56/Apple_Calendar_Icon.png" alt="Google Calendar Logo"/>
+            </header>
+            <section class="card__body">
+              <h2 class="card__title">Calendar</h2>
+              <span class="card__subtitle">Subscribe to Chapter Calendar</span>
+            </section>
+          </div>
         </div>
       </div>
 
-
-      <br/>
       <div class="row">
-        <!-- <pre><code><%= user %></code></pre> -->
+        <div class="four columns">
+          <div onClick="window.open('https://bostondsa.slack.com/');" class="card">
+            <header class="card__header" style="background: #FF4F4F;">
+              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/commons/7/76/Slack_Icon.png" alt="Slack Logo"/>
+            </header>
+            <section class="card__body">
+              <h2 class="card__title">Slack</h2>
+              <span class="card__subtitle">Join the conversation</span>
+            </section>
+          </div>
+        </div>
+        <div class="four columns">
+          <div onClick="window.open('https://twitter.com/Boston_DSA');" class="card">
+            <header class="card__header" style="background: #775B7B;">
+              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/295px-Twitter_bird_logo_2012.svg.png" alt="Twitter Logo" style="height: 96; width: 96;"/>
+            </header>
+            <section class="card__body">
+              <h2 class="card__title">Twitter</h2>
+              <span class="card__subtitle">Follow us on Twitter</span>
+            </section>
+          </div>
+        </div>
+        <div class="four columns">
+          <div onClick="window.open('https://bostonpewg.org/');" class="card">
+            <header class="card__header" style="background: #F8B195;">
+              <img class="card__icon" src="https://i2.wp.com/bostonpewg.org/wp-content/uploads/2018/03/cropped-pewglogo1.png" alt="Blog Logo" style="height: 91px;"/>
+            </header>
+            <section class="card__body">
+              <h2 class="card__title">Blog</h2>
+              <span class="card__subtitle">Political Education Blog</span>
+            </section>
+          </div>
+        </div>
       </div>
+
     </div>
   </body>
 </html>
