--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
         <div class="four columns">
           <div class="card">
             <header class="card__header" style="background: #775B7B;">
-              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/295px-Twitter_bird_logo_2012.svg.png" alt="Twitter Logo" style="height: 96; width: 96;"/>
+              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/it/archive/0/09/20160903181541!Twitter_bird_logo.png" alt="Twitter Logo" style="height: 96; width: 96;"/>
             </header>
             <section class="card__body">
               <h2 class="card__title">Twitter</h2>
