--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,78 +107,29 @@
         <a href="/logout" class="u-pull-right button">Logout</a>
       </div>
 
-      <div class="row">
-        <div class="four columns">
-          <div class="card">
-            <header class="card__header" style="background: #ff0000;">
-              <img class="card__icon" src="https://pbs.twimg.com/profile_images/891003621822910464/Pdp_UUB__400x400.jpg" alt="Slack Logo"/>
-            </header>
-            <section class="card__body">
-              <h2 class="card__title">Website</h2>
-              <span class="card__subtitle" onClick="window.open('https://bostondsa.org/');">bostondsa.org</span>
-            </section>
-          </div>
-        </div>
-        <div class="four columns">
-          <div class="card">
-            <header class="card__header" style="background: #fff;">
-              <img class="card__icon" src="https://wiki.bostondsa.org/w/resources/assets/rose.jpg" alt="Wiki Logo"/>
-            </header>
-            <section class="card__body">
-              <h2 class="card__title">Wiki</h2>
-              <span class="card__subtitle" onClick="window.open('https://wiki.bostondsa.org/');">Chapter knowledge base</span>
-            </section>
-          </div>
-        </div>
-        <div class="four columns">
-          <div class="card">
-            <header class="card__header" style="background: #821D1D;">
-              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/commons/5/56/Apple_Calendar_Icon.png" alt="Google Calendar Logo"/>
-            </header>
-            <section class="card__body">
-              <h2 class="card__title">Calendar</h2>
-              <span class="card__subtitle" onClick="window.open('https://calendars.dsausa.org/u21m8kt8bb1lflp8jpmd317iik%40group.calendar.google.com');">Subscribe to Chapter Calendar</span>
-            </section>
-          </div>
-        </div>
-      </div>
+      <% rows.map((row) => { %>
 
-      <div class="row">
-        <div class="four columns">
-          <div class="card">
-            <header class="card__header" style="background: #FF4F4F;">
-              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/commons/7/76/Slack_Icon.png" alt="Slack Logo"/>
-            </header>
-            <section class="card__body">
-              <h2 class="card__title">Slack</h2>
-              <span class="card__subtitle" onClick="window.open('https://bostondsa.slack.com/');">Join the conversation</span>
-            </section>
-          </div>
-        </div>
-        <div class="four columns">
-          <div class="card">
-            <header class="card__header" style="background: #775B7B;">
-              <img class="card__icon" src="https://upload.wikimedia.org/wikipedia/it/archive/0/09/20160903181541!Twitter_bird_logo.png" alt="Twitter Logo" style="height: 96; width: 96;"/>
-            </header>
-            <section class="card__body">
-              <h2 class="card__title">Twitter</h2>
-              <span class="card__subtitle" onClick="window.open('https://twitter.com/Boston_DSA');">Follow us on Twitter</span>
-            </section>
-          </div>
-        </div>
-        <div class="four columns">
-          <div class="card">
-            <header class="card__header" style="background: #F8B195;">
-              <img class="card__icon" src="https://i2.wp.com/bostonpewg.org/wp-content/uploads/2018/03/cropped-pewglogo1.png" alt="Blog Logo" style="height: 91px;"/>
-            </header>
-            <section class="card__body">
-              <h2 class="card__title">Blog</h2>
-              <span class="card__subtitle" onClick="window.open('https://bostonpewg.org/');">Political Education Blog</span>
-            </section>
-          </div>
-        </div>
-      </div>
+        <div class="row">
 
+          <% row.map((card) => { %>
+
+            <div class="four columns">
+              <div class="card" onClick="location.href = '<%= card.url %>';">
+                <header class="card__header" style="background: <%= card.bg %>;">
+                  <img class="card__icon" src="<%= card.icon %>" alt="<%= card.alt %>" style="<%= card.style %>"/>
+                </header>
+                <section class="card__body">
+                  <h2 class="card__title"><%= card.title %></h2>
+                  <span class="card__subtitle"><%= card.subtitle %></span>
+                </section>
+              </div>
+            </div>
+
+          <% }); %>
+
+        </div>
+
+      <% }); %>
       <br/>
     </div>
   </body>
