--- a/views/slack.ejs
+++ b/views/slack.ejs
@@ -1,103 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Web -->
-    <meta charset="utf-8">
-    <meta name="description" content="Auth">
-    <meta name="author" content="Boston Democratic Socialists of America">
-    <title>Boston DSA</title>
-
-    <!-- Mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Typeface -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600">
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dhg/Skeleton/2.0.4/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dhg/Skeleton/2.0.4/css/skeleton.css">
-
-    <!-- Styles -->
-    <style>
-      a          { color: #b71c1c; }
-      body       { margin-top: 5%; }
-      pre        { word-wrap: break-word; white-space: pre-line; }
-      .button-primary {
-        border-color: #970000 !important;
-        background-color: #b71c1c !important;
-      }
-      .container { max-width: 840px; }
-      .header    { all: unset; }
-      .good     {
-        background-color: #d2ffd2;
-        border-radius: 4px;
-        color: #00880c;
-        margin: 0 2px 0 2px;
-        padding: 6px 12px 6px 12px;
-      }
-      .error     {
-        background-color: #FFD2D2;
-        border-radius: 4px;
-        color: #D8000C;
-        margin: 0 2px 0 2px;
-        padding: 6px 12px 6px 12px;
-      }
-    </style>
-
-    <!-- Cards -->
-    <style>
-      .card {
-        padding: 20px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        cursor: pointer;
-        background-color: #fafafa;
-        margin-top: 10px;
-      }
-      .card:hover, .card:active {
-        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-      }
-      .card:hover .card__header, .card:active .card__header {
-        height: 40px;
-      }
-      .card:hover .card__body, .card:active .card__body {
-        height: 96px;
-      }
-      .card .card__header {
-        position: relative;
-        height: 96px;
-        margin: -20px -20px 20px -20px;
-        transition: height 0.5s;
-        overflow: hidden;
-      }
-      .card .card__header .card__icon {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translateY(-50%) translateX(-50%);
-                transform: translateY(-50%) translateX(-50%);
-        display: block;
-        width: 128px;
-        height: 128px;
-        transition: -webkit-transform 0.5s;
-        transition: transform 0.5s;
-        transition: transform 0.5s, -webkit-transform 0.5s;
-      }
-      .card .card__body {
-        height: 40px;
-        transition: height 0.5s;
-        overflow: hidden;
-      }
-      .card .card__body .card__title {
-        font-size: 1.4em;
-        font-weight: 600;
-        text-transform: uppercase;
-      }
-      .card .card__body .card__subtitle {
-        color: #9E9E9E;
-        font-style: italic;
-      }
-    </style>
-  </head>
+  <%- include head.ejs %>
 
   <body>
     <div class="container">
