Re-add button-primary theme

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -18,15 +18,19 @@
 
   <!-- Styles -->
   <style>
-    a          { color: #b71c1c; }
-    body       {
+    a               { color: #b71c1c; }
+    body            {
       font-family: "Klima", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
       margin-top: 5%;
     }
-    pre        { word-wrap: break-word; white-space: pre-line; }
-    .container { max-width: 840px; }
-    .header    { all: unset; }
-    .warning   {
+    pre             { word-wrap: break-word; white-space: pre-line; }
+    .button-primary {
+      border-color: #970000 !important;
+      background-color: #b71c1c !important;
+    }
+    .container      { max-width: 840px; }
+    .header         { all: unset; }
+    .warning        {
       background-color: #ffd2d2;
       border-radius: 4px;
       color: #d8000c;
