--- a/views/zoom.ejs
+++ b/views/zoom.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include head.ejs %>
+  <%- include('head'); %>
   <body>
     <style>
       .meetings .row {
