--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,10 @@
 
       <div class="row">
         <a class="header" href="/">
-          <div class="one column">
-            <img src="https://s3.amazonaws.com/design.dsausa.org/dsa-circle.png" width="56" height="56"></img>
+          <div class="three column">
+            <img src="https://bostondsa.org/wp-content/uploads/2022/12/Email-header-1.png" width="168" height="56"></img>
           </div>
-          <div class="eleven columns">
+          <div class="nine columns">
             <h1>Boston DSA</h1>
           </div>
         </a>
