--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
       <div class="row">
         <a class="header" href="/">
-          <div class="three column">
+          <div class="three columns">
             <img src="https://bostondsa.org/wp-content/uploads/2022/12/Email-header-1.png" width="168" height="56"></img>
           </div>
           <div class="nine columns">
